--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ description: "August 2023 to June 2024"
 owner_name: Vikki S
 github_username: vikkissd
 baseurl: "/"
-theme: minima
-# remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
 # remote_theme: pages-themes/hacker@v0.2.0
